RESOLVED FIXED260288
[css-grid] css-grid/grid-items/grid-item-inline-contribution-003.html failing
https://bugs.webkit.org/show_bug.cgi?id=260288
Summary [css-grid] css-grid/grid-items/grid-item-inline-contribution-003.html failing
Sammy Gill
Reported 2023-08-16 13:20:21 PDT
css-grid/grid-items/grid-item-inline-contribution-003.html is currently failing on WPT
Attachments
Radar WebKit Bug Importer
Comment 1 2023-08-16 13:20:36 PDT
Sammy Gill
Comment 2 2024-08-12 17:44:32 PDT
EWS
Comment 3 2024-08-15 08:28:49 PDT
Committed 282292@main (cea6964cf434): <https://commits.webkit.org/282292@main> Reviewed commits have been landed. Closing PR #32087 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.